Fix error of modal initialization by defering its initialization Dropped messageboard from welcome page Restore fabtabulous use in admin.tpl Wrap advertisement position selector with div for future porting to jquery tabs Drop / from forwardTo url in login

--- a/public/admin/themes/default/css/admin.css
+++ b/public/admin/themes/default/css/admin.css
@@ -629,6 +629,7 @@ table.aa tr td {
 fieldset {
     border:none;
     border-top:1px solid #ccc;
+	padding: 20px 0;
 }
 legend {
     color:#666;
